--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.33.1",
+    "react-icons": "^4.4.0",
     "react-multi-select-component": "^4.2.9",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
