--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "react-scripts": "5.0.1",
     "react-toastify": "^9.0.5",
     "redux": "^4.2.0",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.4.2",
     "sass": "^1.53.0",
     "toastr": "^2.1.4",
     "web-vitals": "^2.1.4",
