--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-hook-form": "^7.33.1",
     "react-icons": "^4.4.0",
     "react-moment": "^1.1.2",
+    "react-multi-date-picker": "^3.3.4",
     "react-multi-select-component": "^4.2.9",
     "react-multiple-select-dropdown-lite": "^2.0.5",
     "react-redux": "^8.0.2",
