--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.4.2",
     "sass": "^1.53.0",
+    "sweetalert": "^2.1.2",
     "toastr": "^2.1.4",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
