--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bootstrap-icons": "^1.8.3",
     "date-fns": "^2.29.3",
     "moment": "^2.29.4",
+    "multiselect-react-dropdown": "^2.0.25",
     "react": "^17.0.2",
     "react-bootstrap": "^2.4.0",
     "react-date-range": "^1.4.0",
@@ -22,7 +23,8 @@
     "react-hook-form": "^7.33.1",
     "react-icons": "^4.4.0",
     "react-moment": "^1.1.2",
-    "react-multi-select-component": "^4.2.9",
+    "react-multi-date-picker": "^3.3.4",
+    "react-multi-select-component": "^4.3.4",
     "react-multiple-select-dropdown-lite": "^2.0.5",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
@@ -32,6 +34,7 @@
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.4.2",
     "sass": "^1.53.0",
+    "sweetalert": "^2.1.2",
     "toastr": "^2.1.4",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
